# psnotes

./: .anjuta_sym_db.db  .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Other/: P.S. Notes icon.psd
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: com.github.thejambi.psnotes.appdata.xml  com.github.thejambi.psnotes.desktop
deb_help/: control  dayfolder.desktop~  dayfolderpro.desktop.desktop~  dayfolderpro.desktop~  dayjournal.desktop~  install  install~  psnotes.desktop  psnotes.desktop.desktop~
deb_help/source/: include-binaries  include-binaries~
debian/: changelog  control  copyright
src/: FileUtility.c  FileUtility.vala  HyperTextView.vala  Makefile  Makefile.am  Makefile.in  Note.c  Note.vala  Note.vala~  NoteEditor.c  NoteEditor.vala  NotesFilter.vala  NotesMonitor.vala  UserData.c  UserData.vala  UserData.vala~  UserSettingsManager.c  UserSettingsManager.vala  Zystem.c  Zystem.vala  psnotes  psnotes.c  psnotes.vala  psnotes.vala~
src/.deps/: FileUtility.Po  Note.Po  NoteEditor.Po  UserData.Po  UserSettingsManager.Po  Zystem.Po  psnotes.Po
